# ocean-scattering-simulation

build-ui_design-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: ui_mainwindow.h
doc/: readme.md
ui_design/: .gitignore  400km-100m.json  CMakeLists.txt  English.ts  Fizeau_spectrum.csv  L_bc.csv  L_mc.csv  L_rc.csv  PMT_Energy.csv  PMT_Sign.csv  RF.csv  Spectrum1.csv  SpectrumAfterFizeau.csv  buttongroup.cpp  buttongroup.h  buttongroupmanager.cpp  buttongroupmanager.h  constants1.json  customplotmanager.cpp  customplotmanager.h  data_csv.qrc  fizeaudatagenerator.cpp  fizeaudatagenerator.h  frequencedatagenerator.cpp  frequencedatagenerator.h  images.qrc  inputdatalistmanager.cpp  language.qrc  laser_data.csv  laserdatagenerator.cpp  laserdatagenerator.h  libfftw3-3.lib  libfftw3f-3.lib  libfftw3l-3.lib  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  managerbase.cpp  managerbase.h  (+25 more)
ui_design/base/: singleton.h  taskrunner.cpp  taskrunner.h
ui_design/controller/: pageplot.cpp  pageplot.h  plotcontroller.cpp  plotcontroller.h
ui_design/manager/: buttongroupmanager.cpp  buttongroupmanager.h  customplotmanager.cpp  customplotmanager.h  inputdatalistmanager.cpp  inputdatalistmanager.h  lineeditgroupmanager.cpp  lineeditgroupmanager.h  managerbase.cpp  menumanager.cpp  menumanager.h  show1buttongroupmanager.cpp  show1buttongroupmanager.h  texteditgroupmanager.cpp  texteditgroupmanager.h  texteditmanager.cpp  texteditmanager.h  tracermanager.cpp  tracermanager.h
ui_design/matlab/: AddNoiseNondB.cpp  AddNoiseNondB.h  AddNoiseNondB_data.cpp  AddNoiseNondB_data.h  AddNoiseNondB_initialize.cpp  AddNoiseNondB_initialize.h  CaculateScatteredPhotons.cpp  CaculateScatteredPhotons.h  FizeauInstrument.cpp  PMTReceive.cpp  PMTReceive.h  Retrieval.rar  SpectrumGeneration.cpp  VerticalResolution.cpp  VerticalResolution.h  colon.cpp  colon.h  div.cpp  div.h  drawNsMByDepth.cpp  drawNsMByDepth.h  drawSNRDepthByAlpha.cpp  drawSNRDepthByAlpha.h  drawSNRDepthByM.cpp  drawSNRDepthByM.h  eml_mtimes_helper.cpp  eml_mtimes_helper.h  eml_rand_mt19937ar.cpp  eml_rand_mt19937ar.h  eml_rand_mt19937ar_stateful.cpp  eml_rand_mt19937ar_stateful.h  rand.cpp  rand.h  randn.cpp  randn.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.h  sum.cpp  sum.h
ui_design/matlab/Retrieval/: GenerationSpectrum.cpp  GenerationSpectrum.h  PMTFMethods.cpp  PMTFMethods.h  RetrievalAlgorithm.cpp  RetrievalAlgorithm.h  RetrievalAlgorithm_data.cpp  RetrievalAlgorithm_data.h  RetrievalAlgorithm_initialize.cpp  RetrievalAlgorithm_initialize.h  RetrievalAlgorithm_internal_types.h  RetrievalAlgorithm_internal_types1.h  RetrievalAlgorithm_internal_types11.h  RetrievalAlgorithm_internal_types2.h  RetrievalAlgorithm_terminate.cpp  RetrievalAlgorithm_terminate.h  RetrievalAlgorithm_types.h  Retrieval_TS.cpp  Retrieval_TS.h  anonymous_function.h  anonymous_function1.h  checkStoppingCriteria.cpp  checkStoppingCriteria.h  colon.cpp  colon.h  computeFiniteDifferences.cpp  computeFiniteDifferences.h  conv.cpp  conv.h  driver.cpp  driver.h  eml_rand_mt19937ar_1.cpp  eml_rand_mt19937ar_1.h  eml_rand_mt19937ar_stateful_1.cpp  eml_rand_mt19937ar_stateful_1.h  error_fitted_power.cpp  error_fitted_power.h  factoryConstruct.cpp  factoryConstruct.h  hasFiniteBounds.cpp  (+24 more)
ui_design/model/: FizeauInstrument.h  SpectrumGeneration.h  constantmap.cpp  constantmap.h  constantstorage.cpp  constantstorage.h  convolution.cpp  convolution.h  dynamicpagedatageneratorthread.cpp  dynamicpagedatageneratorthread.h  fizeaudatagenerator.cpp  fizeaudatagenerator.h  fizeauifgenerator.cpp  fizeauifgenerator.h  frequencedatagenerator.cpp  frequencedatagenerator.h  laserdatagenerator.cpp  laserdatagenerator.h  pagedatagenerator.cpp  pagedatagenerator.h  pmtreceptiondatagenerator.cpp  pmtreceptiondatagenerator.h  retrievalthread.cpp  retrievalthread.h  rtGetNaN.cpp  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  screencapturetask.cpp  screencapturetask.h  spectrumdatagenerator.cpp  spectrumdatagenerator.h  underwaterspectrumdatagenerator.cpp  underwaterspectrumdatagenerator.h
ui_design/module/: filebrowser.cpp  filebrowser.h  hoverbutton.cpp  hoverbutton.h  hoverinfowidget.cpp  hoverinfowidget.h  mycombobox.cpp  mycombobox.h  mytracer.cpp  mytracer.h  qcustomplot.cpp
ui_design/ui_backup/: english.ts  mainwindow.ui  qss.css  retrievalwindow.ui  ui_design.pro
ui_design/utils/: logger.cpp  logger.h  mymath.cpp  mymath.h  readfiledata.cpp  readfiledata.h
ui_design/view/: dynamicview.cpp  dynamicview.h  plotView.cpp  plotView.h  viewcontroller.cpp  viewcontroller.h
